<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:viewBindingIgnore="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="@dimen/border_dimen"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".forms.SignUp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:fontFamily="@font/font_title"
            android:textSize="80dp"
            android:layout_marginBottom="32dp"
            />
        <androidx.cardview.widget.CardView
            android:padding="@dimen/content_dimen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/border_dimen"
            app:cardElevation="12dp"
            android:background="@android:color/transparent"
            app:cardBackgroundColor="@android:color/transparent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/border_dimen"
                android:background="@drawable/form_login"
                >
                <!--    Account-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contentAccount"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    app:endIconMode="clear_text"
                    android:theme="@style/TextLabel"
                    app:boxStrokeColor="@color/stroke_color"
                    app:hintTextColor="@color/stroke_color"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_Account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        >
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <!--    Passworld    -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contentPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_baseline_password_24"
                    android:layout_marginTop="@dimen/content_dimen"
                    app:endIconMode="password_toggle"
                    android:theme="@style/TextLabel"
                    app:boxStrokeColor="@color/stroke_color"
                    app:hintTextColor="@color/stroke_color"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        >
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <!--    Confirm Password    -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_baseline_password_24"
                    android:layout_marginTop="@dimen/content_dimen"
                    app:endIconMode="password_toggle"
                    android:theme="@style/TextLabel"
                    app:boxStrokeColor="@color/stroke_color"
                    app:hintTextColor="@color/stroke_color"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        >
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <!--    Full name-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your full name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    android:layout_marginTop="@dimen/content_dimen"
                    app:endIconMode="clear_text"
                    android:theme="@style/TextLabel"
                    app:boxStrokeColor="@color/stroke_color"
                    app:hintTextColor="@color/stroke_color"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        >
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <!--    Button Login-->
                <Button
                    android:id="@+id/btn_Login"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/border_dimen"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_decoration"
                    android:textAllCaps="false"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>